--- a/index.html
+++ b/index.html
@@ -634,46 +634,88 @@
                 <input type="radio" name="portfolio" id="slide1" checked hidden>
                 <input type="radio" name="portfolio" id="slide2" hidden>
                 <input type="radio" name="portfolio" id="slide3" hidden>
+                <input type="radio" name="portfolio" id="slide4" hidden>
+                <input type="radio" name="portfolio" id="slide5" hidden>
+                <input type="radio" name="portfolio" id="slide6" hidden>
 
                 <!-- 2) Slides wrapper -->
                 <div class="portfolio__slides carousel__slides">
+
                     <div class="carousel__slide s1">
-                    <img src="assets/img/portfolio1.jpg" alt="Modern Website">
-                    <br>
-                    <h3>Modern Website</h3>
-                    <p>Website adaptable to all devices...</p>
-                    <br>
-                    <a href="#" class="button button--small">Demo</a>
-                    
+                        <img src="assets/img/portfolio1.jpg" alt="Modern Website">
+                        <br>
+                        <h3>Modern Website</h3>
+                        <p>Website adaptable to all devices...</p>
+                        <br>
+                        <a href="#" class="button button--small">Demo</a>
                     </div>
+
                     <div class="carousel__slide s2">
-                    <img src="assets/img/portfolio2.jpg" alt="Brand Design">
-                    <br>
-                    <h3>Brand Design</h3>
-                    <p>Website adaptable to all devices...</p>
-                    <br>
-                    <a href="#" class="button button--small">Demo</a>
+                        <img src="assets/img/portfolio2.jpg" alt="Brand Design">
+                        <br>
+                        <h3>Brand Design</h3>
+                        <p>Website adaptable to all devices...</p>
+                        <br>
+                        <a href="#" class="button button--small">Demo</a>
                     </div>
+
                     <div class="carousel__slide s3">
-                    <img src="assets/img/portfolio3.jpg" alt="Online Store">
-                    <br>
-                    <h3>Online Store</h3>
-                    <p>Website adaptable to all devices...</p>
-                    <br>
-                    <a href="#" class="button button--small">Demo</a>
+                        <img src="assets/img/portfolio3.jpg" alt="Online Store">
+                        <br>
+                        <h3>Online Store</h3>
+                        <p>Website adaptable to all devices...</p>
+                        <br>
+                        <a href="#" class="button button--small">Demo</a>
                     </div>
+
+                    <div class="carousel__slide s4">
+                        <img src="https://cloudfront-us-east-2.images.arcpublishing.com/reuters/OUXSPAPPUVK27H6RHKQWKLT4VI.jpg" alt="Project 4">
+                        <br>
+                        <h3>Project 4</h3>
+                        <p>Description…</p>
+                        <br>
+                        <a href="#" class="button button--small">Demo</a>
+                    </div>
+
+                    <div class="carousel__slide s5">
+                        <img src="https://tse3.mm.bing.net/th/id/OIP.1QyQw69XruU5IHy07aP8ogHaEK?pid=Api&P=0&h=180" alt="Project 5">
+                        <br>
+                        <h3>Project 5</h3>
+                        <p>Description…</p>
+                        <br>
+                        <a href="#" class="button button--small">Demo</a>
+                    </div>
+
+                    <div class="carousel__slide s6">
+                        <img src="https://media.sketchfab.com/models/8a66de89107f44e2a9524f38d9ed7110/thumbnails/3cdfc6de78e84022936d3af7127a4ecf/79590e616bd349f6b6ee0e19bda3f14e.jpeg" alt="Project 6">
+                        <br>
+                        <h3>Project 6</h3>
+                        <p>Description…</p>
+                        <br>
+                        <a href="#" class="button button--small">Demo</a>
+                    </div>
+
                 </div>
 
                 <!-- 3) Prev/Next controls -->
                 <div class="portfolio__nav carousel__nav">
-                    <label for="slide3" class="prev prev1">‹</label>
+                    <label for="slide6" class="prev prev1">‹</label>
                     <label for="slide2" class="next next1">›</label>
 
                     <label for="slide1" class="prev prev2">‹</label>
                     <label for="slide3" class="next next2">›</label>
 
                     <label for="slide2" class="prev prev3">‹</label>
-                    <label for="slide1" class="next next3">›</label>
+                    <label for="slide4" class="next next3">›</label>
+
+                    <label for="slide3" class="prev prev4">‹</label>
+                    <label for="slide5" class="next next4">›</label>
+                    <!-- slide5 -->
+                    <label for="slide4" class="prev prev5">‹</label>
+                    <label for="slide6" class="next next5">›</label>
+                    <!-- slide6 -->
+                    <label for="slide5" class="prev prev6">‹</label>
+                    <label for="slide1" class="next next6">›</label>
                 </div>
 
                 <!-- 4) Pagination dots -->
@@ -681,9 +723,52 @@
                     <label for="slide1" class="dot dot1"></label>
                     <label for="slide2" class="dot dot2"></label>
                     <label for="slide3" class="dot dot3"></label>
+                    <label for="slide4" class="dot dot4"></label>
+                    <label for="slide5" class="dot dot5"></label>
+                    <label for="slide6" class="dot dot6"></label>
                 </div>
                 <br>
-                </section>
+            </section>
+
+
+            <!--==================== CERTIFICATIONS ====================-->
+            <section class="certifications section" id="certifications">
+            <h2 class="section__title">Certifications</h2>
+            <span class="section__subtitle">My Credentials</span>
+
+            <div class="certifications__container container grid">
+                <!-- Full Stack Developer -->
+                <div class="certification__card">
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjBpvhfS2nkLNrgfPiYwGzHcib2jQKak_YVkeXz3zPaPjD9Y5CTT8ziQ3_KOxaG_iJZogzktvbJcVc9qBtN5ZpIm9mYTTh1HCIE-_F_MsVjxWI85RfwXRckP1x_5GvLBMmm3WjqlPW8FkwPIa-iHeQD5H7G-mZWfX6aavm0b8LQc3HvvROlJ_OAnmpwx9E/s16000/IBM%20Full%20Stack%20Software%20Developer%20Professional%20Certificates.PNG" alt="Full Stack Developer Badge" class="certification__img">
+                <h3 class="certification__title">Full Stack Developer</h3>
+                <a download href=".assets/pdf/1.pdf" class="button button--flex certification__button">
+                    Download Certificate
+                    <i class="uil uil-cloud-download button__icon"></i>
+                </a>
+                </div>
+
+                <!-- Software Developer -->
+                <div class="certification__card">
+                <img src="https://www.unirank.org/i/programs-courses-degrees/bachelor-of-software-development-500x356.png" alt="Software Developer Badge" class="certification__img">
+                <h3 class="certification__title">Software Developer</h3>
+                <a download href=".assets/pdf/2.pdf" target="_blank" class="button button--flex certification__button">
+                    Download Certificate
+                    <i class="uil uil-cloud-download button__icon"></i>
+                </a>
+                </div>
+
+                <!-- AWS Certified -->
+                <div class="certification__card">
+                <img src="https://campus.w3schools.com/cdn/shop/files/127_700x700.png" alt="AWS Certified Badge" class="certification__img">
+                <h3 class="certification__title">AWS Certified</h3>
+                <a download="" href=".assets/pdf/3.pdf" target="_blank" class="button button--flex certification__button">
+                    Download Certificate
+                    <i class="uil uil-cloud-download button__icon"></i>
+                </a>
+                </div>
+            </div>
+            </section>
+
 
 
 
