--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
                 <div class="certification__card">
                 <img src="https://www.unirank.org/i/programs-courses-degrees/bachelor-of-software-development-500x356.png" alt="Software Developer Badge" class="certification__img">
                 <h3 class="certification__title">Software Developer</h3>
-                <a download href=".assets/pdf/2.pdf" target="_blank" class="button button--flex certification__button">
+                <a download href=".assets/pdf/2.pdf" class="button button--flex certification__button">
                     Download Certificate
                     <i class="uil uil-cloud-download button__icon"></i>
                 </a>
@@ -761,7 +761,7 @@
                 <div class="certification__card">
                 <img src="https://campus.w3schools.com/cdn/shop/files/127_700x700.png" alt="AWS Certified Badge" class="certification__img">
                 <h3 class="certification__title">AWS Certified</h3>
-                <a download="" href=".assets/pdf/3.pdf" target="_blank" class="button button--flex certification__button">
+                <a download="" href=".assets/pdf/3.pdf" class="button button--flex certification__button">
                     Download Certificate
                     <i class="uil uil-cloud-download button__icon"></i>
                 </a>
